# DOSBoxGTK

./: .gitignore  CMakeLists.txt  INSTALL.md  README  README.md  changelog  cmake modules  index.html  params.json
build_release/: CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  cmake_uninstall.cmake  dosboxgtk  dosboxgtk.desktop  org.kazires.dosboxgtk.gresource.xml
build_release/schemas/: gschemas.compiled  org.kazires.dosboxgtk.gschema.xml
cmake modules/: FindColours.cmake  FindConfigPackage.cmake  FindConfigTranslation.cmake  FindXGettext.cmake
gui/: editmountdialog.glade  editprofiledialog.glade  mainwindow.glade  mixerdialog.glade  preferencesdialog.glade  selectgameinfodialog.glade
src/: editmountdialog.cpp  editmountdialog.h  editprofiledialog.cpp  editprofiledialog.h  htmltools.cpp  htmltools.hpp  imgmountcommand.cpp  imgmountcommand.h  main.cpp  mainwindow.cpp  mainwindow.h  mixerdialog.cpp  mixerdialog.h  mountcommand.cpp  mountcommand.h  mountcommandbase.cpp  mountcommandbase.h  preferencesdialog.cpp  preferencesdialog.h  resourcemanager.cpp  resourcemanager.hpp  selectgameinfodialog.cpp  selectgameinfodialog.h
templates/: Doxyfile.in  cmake_uninstall.cmake.in  config_header.in  desktop.in  gresource.xml.in  gschema.xml.in
translations/: es.po
